--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%include partials/head%>
+
+<body>
+  
+  <div id="main">
+    <%include partials/nav%>
+
+    <span class="rsvp-ribbon"></span>
+
+    <div id="intro" class="full-page">
+      <div class="jumbo">
+        <h3>Geisa Dutra Presents</h3>
+      </div>
+    </div>
+  </div>
+
+</body>
+
+<%include partials/footer%>
