--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
 
     <div id="intro" class="full-page">
       <div class="jumbo">
-        <h3>Geisa Dutra Presents</h3>
+        <div class="jumbo-header">
+          <h3>Geisa Dutra Presents</h3>
+        </div>
       </div>
     </div>
   </div>
